fixed uneven images that was giving me fits

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', arial;
+
 }
 .top {
     display: flex;
@@ -20,6 +22,7 @@ body {
     height: auto;
     width: 125px;
     clip-path: circle();
+    margin-right: 70px;
 }
 
 .header-links {
@@ -44,24 +47,36 @@ margin-bottom: 50px;
 .middle-one {
     text-align: center;
     justify-content: center;
-    align-items: flex-start;
 }
 
 .items {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin: 50px;
+    margin: 100px;
+}
+
+.items :nth-child(4) {
+
+    height: 470px;
+    justify-content: flex-end;
 }
 
 .info {
     display: flex;
     flex-flow: column wrap;
-    align-items: center;
-    justify-content: flex-start;
-    width: 200px;
-    gap: 8px;
 }
+
+.info img {
+    border: 3px #3882f6 solid;
+    border-radius: 8px;
+    align-self: center;
+}
+
+.info p {
+    width: 300px;
+}
+
 
 .middle-two {
     display: flex;
@@ -171,7 +186,7 @@ button {
     border: 1px #3882f6;
 }
 
- p {
+p {
         font-size: 18px;
         font-style: #e5d7eb;
  }
